--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -2,7 +2,7 @@
 /*** Hero Header ***/
 .heroHeader {
     margin-bottom: 6rem;
-    padding: 18rem 0;
+    padding: 14vw 0;
     background:
         url(/img/blob-top-left.png),
         url(/img/blob-top-right.png),
