--- a/src/components/Feature/Feature.module.css
+++ b/src/components/Feature/Feature.module.css
@@ -41,21 +41,21 @@
 @media (min-width: 920px)
 {
     .featureItem {
-        font-size: 1.3vw;
+        font-size: 1rem;
     }
 
     .Title {
-        font-size: 2.1vw;
+        font-size: 1.875rem;
     }
 }
 
 @media (min-width: 1400px)
 {
     .featureItem {
-        font-size: 1.2vw;
+        font-size: 1.4rem;
     }
 
     .Title {
-        font-size: 2vw;
+        font-size: 1.5rem;
     }
 }
