--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -11,9 +11,11 @@
 .navbarLight .navbarNav .navLink {
     position: relative;
     margin-right: 25px;
-    padding: 35px 0;
-    font-family: 'Jost', sans-serif;
-    font-size: 18px;
+    padding: 30px 0;
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    font-size: 0.875rem; /* 14px */
+    line-height: 1.25rem;
+    
     font-weight: 500;
     color: var(--navbar-color) !important;
     outline: none;
